fix layout issues on h-groups in editor view, closes #459
(cherry picked from commit ab942f191d75a3dadf80d634ad0514154d469218)

--- a/web/css/editor.css
+++ b/web/css/editor.css
@@ -127,4 +127,6 @@ div#sub_footer_module{background-color:#bbb!important;}
 
 div#buttonmessage{color:#ff0000;text-align:center;}
 
-
+div.metaeditor{overflow:hidden;}
+div.metaeditor div.label{width:100px;}
+div.metaeditor div#editor_content{margin-left:110px;}
